# Lab5ISRPO

./: CMakeLists.txt
calc/: CMakeLists.txt  calc2args.cpp  calc2args.h
tests/: CMakeLists.txt  test.cpp
